--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 django = "^4.2.7"
 psycopg2 = "^2.9.9"
+django-crispy-forms = "^2.1"
+crispy-bootstrap4 = "^2023.1"
 
 
 [tool.poetry.group.dev.dependencies]
